--- a/Vitkund/Views/Home/BusinessIdeas.cshtml
+++ b/Vitkund/Views/Home/BusinessIdeas.cshtml
@@ -1,75 +1,5 @@
 ﻿@model List<Vitkund.Models.tblBusinessidea>
 
-<body class="rbt-header-sticky">
-
-    <!-- Start Header Area -->
-    <!-- Mobile Menu Section -->
-    <div class="popup-mobile-menu">
-        <div class="inner-wrapper">
-            <div class="inner-top">
-                <div class="content">
-                    <div class="logo">
-                        <a href="index">
-                            <img src="~/Content/assets/images/logo.png" alt="Education Logo Images">
-                        </a>
-                    </div>
-                    <div class="rbt-btn-close">
-                        <button class="close-button rbt-round-btn"><i class="feather-x"></i></button>
-                    </div>
-                </div>
-                <ul class="navbar-top-left rbt-information-list justify-content-start" style="padding-top:30px;">
-                    <li>
-                        <a href="mailto:info@vitkund.com"><i class="feather-mail"></i>info@vitkund.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:8607609898"><i class="feather-phone"></i>8607609898</a>
-                    </li>
-                </ul>
-            </div>
-
-            <nav class="mainmenu-nav">
-                <ul class="mainmenu">
-                    <li><a href="index">Home</a></li>
-                    <li><a href="about-us">About Us</a></li>
-                    <li><a href="course">Courses</a></li>
-                    <li><a href="our-services">Our Services</a></li>
-                    <li><a href="plan">Plan</a></li>
-                    <li><a href="faq">FAQ</a></li>
-                    <li><a href="contact-us">Contact Us</a></li>
-                </ul>
-            </nav>
-
-            <div class="mobile-menu-bottom">
-                <div class="rbt-btn-wrapper mb--20">
-                    <a class="rbt-btn blink btn-border-gradient radius-round btn-sm hover-transform-none w-100 justify-content-center text-center" href="vitkund">
-                        <span>Vitkund Gaon</span>
-                    </a>
-
-                </div>
-
-                <div class="social-share-wrapper">
-                    <span class="rbt-short-title d-block">Find With Us</span>
-                    <ul class="social-icon social-default transparent-with-border justify-content-start mt--20">
-                        <li>
-                            <a href="https://m.facebook.com/profile.php?id=100087627835593&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
-                        </li>
-
-                        <li>
-                            <a href="https://instagram.com/vitkund"><i class="fab fa-instagram"></i></a>
-                        </li>
-
-                        <li>
-                            <a href="https://www.youtube.com/@("@vitkund")"><i class="fab fa-youtube"></i></a>
-                        </li>
-
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <a class="close_side_menu" href="javascript:void(0);"></a>
 
 
     <div class="rbt-page-banner-wrapper">
@@ -285,7 +215,7 @@
                                             <!-- <span class="current-price">$60</span> -->
                                             <!-- <span class="off-price">$120</span> -->
                                             <!-- </div> -->
-                                            <a class="rbt-btn-link" href="#">
+                                            <a class="rbt-btn-link" href="/Business-Ideas/@item.Id">
                                                 Learn
                                                 More<i class="feather-arrow-right"></i>
                                             </a>
@@ -306,12 +236,6 @@
 
 
 
-
-
-
-
-
-
     <div class="rbt-separator-mid">
         <div class="container">
             <hr class="rbt-separator m-0">
@@ -321,36 +245,4 @@
 
 
 
-    <!-- JS
-    ============================================ -->
-    <!-- Modernizer JS -->
-    <script src="~/Content/assets/js/vendor/modernizr.min.js"></script>
-    <!-- jQuery JS -->
-    <script src="~/Content/assets/js/vendor/jquery.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="~/Content/assets/js/vendor/bootstrap.min.js"></script>
-    <!-- sal.js -->
-    <script src="~/Content/assets/js/vendor/sal.js"></script>
-    <script src="~/Content/assets/js/vendor/swiper.js"></script>
-    <script src="~/Content/assets/js/vendor/magnify.min.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-appear.js"></script>
-    <script src="~/Content/assets/js/vendor/odometer.js"></script>
-    <script src="~/Content/assets/js/vendor/backtotop.js"></script>
-    <script src="~/Content/assets/js/vendor/isotop.js"></script>
-    <script src="~/Content/assets/js/vendor/imageloaded.js"></script>
-
-    <script src="~/Content/assets/js/vendor/wow.js"></script>
-    <script src="~/Content/assets/js/vendor/waypoint.min.js"></script>
-    <script src="~/Content/assets/js/vendor/easypie.js"></script>
-    <script src="~/Content/assets/js/vendor/text-type.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-one-page-nav.js"></script>
-    <script src="~/Content/assets/js/vendor/bootstrap-select.min.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-ui.js"></script>
-    <script src="~/Content/assets/js/vendor/magnify-popup.min.js"></script>
-    <script src="~/Content/assets/js/vendor/paralax-scroll.js"></script>
-    <script src="~/Content/assets/js/vendor/paralax.min.js"></script>
-    <script src="~/Content/assets/js/vendor/countdown.js"></script>
-    <script src="~/Content/assets/js/vendor/plyr.js"></script>
-    <!-- Main JS -->
-    <script src="~/Content/assets/js/main.js"></script>
-</body>
+   
