--- a/Vitkund/Views/Home/Multiplechoice.cshtml
+++ b/Vitkund/Views/Home/Multiplechoice.cshtml
@@ -31,14 +31,13 @@
                         <div id="billing-form">
 
                             <div class="row g-3">
-                                <div class="col-md-6 col-12">
+                                <div class="col-md-8 col-12">
                                     <label>
-                                        Q: क्या आपने कोई  उधार लिया हुआ हैं <br>
-                                        और समय पर चूका रहे हो
+                                        Q: क्या आपने कोई  उधार लिया हुआ हैं और समय पर चुका रहे हो या चुकाया हैं?
                                     </label>
                                 </div>
 
-                                <div class="col-md-6 col-12">
+                                <div class="col-md-4 col-12">
                                     <div class="col-12 mb--50">
                                         <div class="check-box">
                                             <input type="checkbox" id="create_account1" wfd-id="id11">
@@ -53,11 +52,11 @@
                                 </div>
 
 
-                                <div class="col-md-6 col-12">
-                                    <label>Q: क्या आप जो काम करते हो या करने जा रहे हो  उसको प्रसन्ता से करते हो या करोगे </label>
+                                <div class="col-md-8 col-12">
+                                    <label>Q: क्या जो व्यवसाय आप करने जा रहे हो उसको प्रसन्नता से करोगे? और ये व्यवसाय आपकी पसंद का हैं? </label>
 
                                 </div>
-                                <div class="col-md-6 col-12">
+                                <div class="col-md-4 col-12">
                                     <div class="col-12 mb--50">
                                         <div class="check-box">
                                             <input type="checkbox" id="create_account3" wfd-id="id11">
@@ -70,12 +69,12 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 col-12">
-                                    <label>Q: क्या आप अपने व्यवसाय को लेकर गंभीर हो ?</label>
+                                <div class="col-md-8 col-12">
+                                    <label>Q: क्या आप व्यवसाय को लेकर गंभीर हो?</label>
 
                                 </div>
 
-                                <div class="col-md-6 col-12">
+                                <div class="col-md-4 col-12">
                                     <div class="col-12 mb--50">
                                         <div class="check-box">
                                             <input type="checkbox" id="create_account5" wfd-id="id11">
@@ -88,11 +87,11 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 col-12">
-                                    <label>Q: क्या आप के अंदर जोखिम लेने की क्षमता हैं?</label>
+                                <div class="col-md-8 col-12">
+                                    <label>Q: क्या आप के अंदर व्यवसाय जोखिम लेने की क्षमता हैं और आप व्यवसाय के जोखिम को अच्छी तरह समझते हो?</label>
                                 </div>
 
-                                <div class="col-md-6 col-12">
+                                <div class="col-md-4 col-12">
                                     <div class="col-12 mb--50">
                                         <div class="check-box">
                                             <input type="checkbox" id="create_account6" wfd-id="id11">
@@ -105,10 +104,10 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 col-12">
-                                    <label>Q: क्या आप अपने व्यवसाय को पर्याप्त समय दोगे ?</label>
+                                <div class="col-md-8 col-12">
+                                    <label>Q: क्या आप अपने व्यवसाय को पर्याप्त समय और सम्मान देंगे?</label>
                                 </div>
-                                <div class="col-md-6 col-12">
+                                <div class="col-md-4 col-12">
                                     <div class="col-12 mb--50">
                                         <div class="check-box">
                                             <input type="checkbox" id="create_account8" wfd-id="id11">
@@ -121,10 +120,10 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 col-12">
-                                    <label>Q: क्या आप के अंदर नेतृत्व क्षमता और निर्णय लेने की क्षमता हैं ?</label>
+                                <div class="col-md-8 col-12">
+                                    <label>Q: क्या आपके अंदर व्यवसाय प्रतियोगिता करने का जज्बा है और मार्केटिंग/प्रॉडक्ट सेल करने की कला हैं?</label>
                                 </div>
-                                <div class="col-md-6 col-12">
+                                <div class="col-md-4 col-12">
                                     <div class="col-12 mb--50">
                                         <div class="check-box">
                                             <input type="checkbox" id="create_account10" wfd-id="id11">
@@ -137,10 +136,26 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 col-12">
-                                    <label>Q: क्या आप व्यवसाय को मेहनत से करोगे ?</label>
+                                <div class="col-md-8 col-12">
+                                    <label>Q: क्या आपके पास नेतृत्व, निर्णय लेने की क्षमता और टीम भावना है?</label>
                                 </div>
-                                <div class="col-md-6 col-12">
+                                <div class="col-md-4 col-12">
+                                    <div class="col-12 mb--50">
+                                        <div class="check-box">
+                                            <input type="checkbox" id="create_account12" wfd-id="id11">
+                                            <label for="create_account12">Yes</label>
+                                        </div>
+                                        <div class="check-box">
+                                            <input type="checkbox" id="shiping_address13" data-shipping="" wfd-id="id12">
+                                            <label for="shiping_address13">No</label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-8 col-12">
+                                    <label>Q: क्या आप मेहनत और लगन से बिजनेस करेंगे?</label>
+                                </div>
+                                <div class="col-md-4 col-12">
                                     <div class="col-12 mb--50">
                                         <div class="check-box">
                                             <input type="checkbox" id="create_account12" wfd-id="id11">
