--- a/Vitkund/Views/Home/Vitkundgaon.cshtml
+++ b/Vitkund/Views/Home/Vitkundgaon.cshtml
@@ -33,17 +33,18 @@
                         <div class="row g-5">
                             <div class="col-md-6 col-12">
                                 <label>Age*</label>
-                                <input type="text" placeholder=" ">
+                                <input type="text" placeholder="Your Age">
                             </div>
                             <div class="col-md-6 col-12">
                                 <label>Type of Firm*</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
                                     <select class="w-100">
-                                        <option>एकल स्वामित्व</option>
-                                        <option>साझेदारी</option>
-                                        <option>कंपनी</option>
-                                        <option>ओपीसी</option>
-                                        <option>गैर पंजीकृत</option>
+                                        <option> -- Select --</option>
+                                        <option>Sole Proprietorship</option>
+                                        <option>Partnerships</option>
+                                        <option>Company</option>
+                                        <option>One Person Company</option>
+                                        <option>Unregistered</option>
                                     </select>
                                 </div>
 
@@ -51,59 +52,140 @@
 
                             <div class="col-md-6 col-12">
                                 <label>Education*</label>
-                                <input type="text" placeholder=" ">
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option>10th</option>
+                                        <option>12th</option>
+                                        <option>Graduate</option>
+                                        <option>Post Graduate</option>
+                                        <option>Bussiness Related Education</option>
+                                    </select>
+                                </div>
                             </div>
 
                             <div class="col-md-6 col-12">
                                 <label>Profit Percentage*</label>
-                                <input type="text" placeholder=" ">
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option><= 5%</option>
+                                        <option>6 to 10%</option>
+                                        <option>11 to 20%</option>
+                                        <option>21 to 35%</option>
+                                        <option> > 35%</option>
+                                    </select>
+                                </div>
                             </div>
 
                             <div class="col-md-6 col-12">
                                 <label>Experience*</label>
-                                <input type="text" placeholder=" ">
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option><=1 Year</option>
+                                        <option>1 to 3 Year</option>
+                                        <option>3 to 5 Year</option>
+                                        <option> > 5 Year</option>
+                                        <option> > 7 Year/Related</option>
+                                    </select>
+                                </div>
                             </div>
 
                             <div class="col-md-6 col-12">
                                 <label>Premises*</label>
                                 <div class="rbt-modern-select bg-transparent height-45">
                                     <select class="w-100">
-                                        <option>किराये</option>
-                                        <option>लीज होल्डर</option>
-                                        <option>सोसाइटी की खुद के नाम पर</option>
-                                        <option>सरकार की खुद के नाम पर</option>
-                                        <option>खुद का</option>
+                                        <option> -- Select --</option>
+                                        <option>On Rent</option>
+                                        <option>On Lease</option>
+                                        <option>Trust/Society Property</option>
+                                        <option>Property</option>
+                                        <option>Own Property</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-12">
+                                <label>Capital </label>
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option> <= 10%</option>
+                                        <option>11 to 25%</option>
+                                        <option>26 to 40%</option>
+                                        <option>41 to 60%</option>
+                                        <option> >60%</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-12">
+                                <label>Raw Material & Labour Etc. Availability</label>
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option> >251 KM</option>
+                                        <option>151 to 250KM</option>
+                                        <option>101 to 150KM</option>
+                                        <option>51 to 100KM</option>
+                                        <option> Less then 50KM</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-12">
+                                <label>Research & Development </label>
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option><=1 Year</option>
+                                        <option>1 to 3 Year</option>
+                                        <option>3 to 5 Year</option>
+                                        <option> > 5 Year</option>
+                                        <option> > 7 Year/Related</option>
+                                    </select>
+                                </div>
+                            </div>
+
+
+                            <div class="col-md-6 col-12">
+                                <label>Marketing & Product Selling</label>
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option> Untrained Worker</option>
+                                        <option>Through Social Media</option>
+                                        <option>Through Trained & Skilled Workers</option>
+                                        <option> Responsibility of partner or Manager</option>
+                                        <option> Own Responsibility</option>
                                     </select>
                                 </div>
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>Capital </label>
-                                <input type="text" placeholder=" ">
-                            </div>
-
-                            <div class="col-md-6 col-12">
-                                <label>Raw Material</label>
-                                <input type="text" placeholder=" ">
-                            </div>
-                            <div class="col-md-6 col-12">
-                                <label>Research </label>
-                                <input type="text" placeholder=" ">
-                            </div>
-
-                            <div class="col-md-6 col-12">
-                                <label>Marketing</label>
-                                <input type="text" placeholder="">
-                            </div>
-
-                            <div class="col-md-6 col-12">
                                 <label>Cibil Score</label>
-                                <input type="text" placeholder=" ">
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option> >= 800 </option>
+                                        <option> > 775 to 799</option>
+                                        <option> > 750 to 774</option>
+                                        <option> > 715 to 749</option>
+                                        <option> < 714 </option>
+                                    </select>
+                                </div>
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>Expert</label>
-                                <input type="text" placeholder=" ">
+                                <label>Business Expertise</label>
+                                <div class="rbt-modern-select bg-transparent height-45">
+                                    <select class="w-100">
+                                        <option> -- Select --</option>
+                                        <option> Self Skilled </option>
+                                        <option> Partner or Manager Specialist</option>
+                                        <option> Worker & Labour Specialist</option>
+                                        <option> Semi-trained Staff & Owners</option>
+                                        <option> Untrained Staff & Owners </option>
+                                    </select>
+                                </div>
                             </div>
 
                             <div class="plceholder-button mt--50">
