--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -675,7 +675,7 @@
                                     </li>
 
                                     <li>
-                                        <a href="business-ideas">Business Ideas</a>
+                                        <a href="/business-ideas">Business Ideas</a>
                                     </li>
                                     <li>
                                         <a href="gallery">Gallery</a>
@@ -738,6 +738,9 @@
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-12">
                         <ul class="copyright-link rbt-link-hover justify-content-center justify-content-lg-end mt_sm--10 mt_md--10">
+                            <li><a href="privacy-policy">Privacy Policy</a></li>
+                            <li><a href="terms-and-condition">Terms and Condition</a></li>
+                            <li><a href="refund-policy">Refund Policy</a></li>
                             <li><a href="login">Login & Register</a></li>
                         </ul>
                     </div>
